crates/web/tests/snapshots/fixture_structure_test__post_user_password_invalid.snap
---
source: inspectah-web/tests/fixture_structure_test.rs
expression: value
---
{
  "error": "password does not meet complexity requirements"
}
